--- a/packages/filebrowser/style/index.css
+++ b/packages/filebrowser/style/index.css
@@ -9,7 +9,7 @@
 
 :root {
   --jp-private-filebrowser-button-height: 28px;
-  --jp-private-filebrowser-button-width: 48px;
+  --jp-private-file.browser-button-width: 48px;
 }
 
 /*-----------------------------------------------------------------------------
